meta data is updated

--- a/public/index.html
+++ b/public/index.html
@@ -6,27 +6,61 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description" content="Explore the portfolio of Latif Altay, a software developer specializing in React.js and web development. Check out projects, skills, and contact information." />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>Latif Altay | Portfolio</title>
+  <title>Latif Altay | Software Developer Portfolio</title>
   <meta name="description" content="Self Developed personal website build with React.js">
+  
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://www.latifaltay.com" />
+
+  <!-- Keywords -->
+  <meta name="keywords" content="Latif Altay, Portfolio, React.js, Software Developer, Personal Website" />
+
+  <!-- Robots -->
+  <meta name="robots" content="index, follow" />
 
   <!-- Google / Search Engine Tags -->
-  <meta itemprop="name" content="latifaltay | Portfolio">
+  <meta itemprop="name" content="Latif Altay | Software Developer Portfolio">
   <meta itemprop="description" content="Self Developed personal website build with React.js">
-  
+  <meta itemprop="image" content="https://raw.githubusercontent.com/latifaltay/Portfolio/master/Images/readme-img.png">
 
   <!-- Facebook Meta Tags -->
   <meta property="og:type" content="website">
-  <meta property="og:title" content="latifaltay | Portfolio">
+  <meta property="og:title" content="Latif Altay | Software Developer Portfolio">
   <meta property="og:description" content="Self Developed personal website build with React.js">
-  
+  <meta property="og:image" content="https://raw.githubusercontent.com/latifaltay/Portfolio/master/Images/readme-img.png">
+  <meta property="og:url" content="https://www.latifaltay.com" />
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="latifaltay | Portfolio">
+  <meta name="twitter:title" content="Latif Altay | Software Developer Portfolio">
   <meta name="twitter:description" content="Self Developed personal website build with React.js">
+  <meta name="twitter:image" content="https://raw.githubusercontent.com/latifaltay/Portfolio/master/Images/readme-img.png">
+  <meta name="twitter:url" content="https://www.latifaltay.com" />
   
+  <!-- Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Latif Altay",
+    "url": "https://www.latifaltay.com",
+    "image": "https://raw.githubusercontent.com/latifaltay/Portfolio/master/Images/readme-img.png",
+    "sameAs": [
+      "https://www.linkedin.com/in/latifaltay",
+      "https://github.com/latifaltay",
+      "https://twitter.com/latifaltay"
+    ],
+    "jobTitle": "Software Developer",
+    "worksFor": {
+      "@type": "Organization",
+      "name": "Orthero"
+    },
+    "description": "Self Developed personal website build with React.js"
+  }
+  </script>
+
 </head>
 
 <body>
